--- a/Project with HTML and CSS/template.css
+++ b/Project with HTML and CSS/template.css
@@ -1,21 +1,134 @@
 /*background-color Para asignar un color al fondo de la pantalla de la pagina */
-body{
-    background-color: black;
-}
 /*color Para asignarle un color de letra al texto*/
-p{
-    color: white;
-}
 /*Cuando se llama un tipo Id se utiliza el # al inicio del nomnbre del tag*/
-#first-paragraph{
-    color:  red;
+/*Cuando se llama un selector tipo class se utiliza el . al inicio del nombre del tag*/
+/*background-image se utiliza para poner una foto de fondo de la pagina web*/
+/*background-size Utilizado para ajustar el tamaño del fondo
+    COVER se utiliza para cubrir todo el fondo */
+body{
+    background-image: url("img/texture.jpg");
+    background-size: cover;
+    font-family: 'Roboto',sans-serif;
+    font-size: 1.8em;
 }
-#second-paragraph{
-    color: cyan;
+.main{
+    background-color: rgba(255, 255, 255, 0.8);
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-bottom: 8px;
+    border-radius: 10px;
+    width: 800px;
 }
-.third-paragraph{
-    color: chartreuse;
+.button{
+    color: red;
+    background-color: green;
+    padding: 10px;
+    border-radius: 15px;
+    border: solid gray 2px;
 }
-.big{
-    font-size: 30px;
+/*hover es para que cuando se coloque el cursor encima del boton tenga una funcion*/
+.button:hover{
+    background-color: white;
+    color: black ;
+}
+#menu {
+	background: #0099CC;
+	color: #FFF;
+	height: 45px;
+	padding-left: 18px;
+	border-radius: 10px;
+}
+#menu ul, #menu li {
+	margin: 0 auto;
+	padding: 0;
+	list-style: none
+}
+#menu ul {
+	width: 100%;
+}
+#menu li {
+	float: left;
+	display: inline;
+	position: relative;
+}
+#menu a {
+	display: block;
+	line-height: 45px;
+	padding: 0 14px;
+	text-decoration: none;
+	color: #FFFFFF;
+	font-size: 16px;
+}
+#menu a.dropdown-arrow:after {
+	content: "\25BE";
+	margin-left: 5px;
+}
+#menu li a:hover {
+	color: #0099CC;
+	background: #F2F2F2;
+}
+#menu input {
+	display: none;
+	margin: 0;
+	padding: 0;
+	height: 45px;
+	width: 100%;
+	opacity: 0;
+	cursor: pointer
+}
+#menu label {
+	display: none;
+	line-height: 45px;
+	text-align: center;
+	position: absolute;
+	left: 35px
+}
+#menu label:before {
+	font-size: 1.6em;
+	content: "\2261"; 
+	margin-left: 20px;
+}
+#menu ul.sub-menus{
+	height: auto;
+	overflow: hidden;
+	width: 170px;
+	background: #444444;
+	position: absolute;
+	z-index: 99;
+	display: none;
+}
+#menu ul.sub-menus li {
+	display: block;
+	width: 100%;
+}
+#menu ul.sub-menus a {
+	color: #FFFFFF;
+	font-size: 16px;
+}
+#menu li:hover ul.sub-menus {
+	display: block
+}
+#menu ul.sub-menus a:hover{
+	background: #F2F2F2;
+	color: #444444;
+}
+@media screen and (max-width: 800px){
+	#menu {position:relative}
+	#menu ul {background:#111;position:absolute;top:100%;right:0;left:0;z-index:3;height:auto;display:none}
+	#menu ul.sub-menus {width:100%;position:static;}
+	#menu ul.sub-menus a {padding-left:30px;}
+	#menu li {display:block;float:none;width:auto;}
+	#menu input, #menu label {position:absolute;top:0;left:0;display:block}
+	#menu input {z-index:4}
+	#menu input:checked + label {color:white}
+	#menu input:checked + label:before {content:"\00d7"}
+	#menu input:checked ~ ul {display:block}
+}
+@media(max-width: 600px){
+    .main{
+        width: calc(100%-10px);
+    }
+    body{
+        background-size: auto;
+    }
 }
